wip: annotation export by batch